# Mighty

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  Makefile  README.md  Sigmoid & Luby Performance.ipynb  ddqn_utils.py  index.html  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  test_carl_import.py  test_dqn_implementation.ipynb  test_ppo_implementation.ipynb  train_dqn.py
.github/: publish-release.yaml
.github/Issue_Template/: issue_template.md
.github/Pull_Request_Template/: pull_request_template.md
.github/workflows/: docs.yaml  pytest.yml  test.yaml
checkpointing_test/: agent.ini  scenario.ini
checkpointing_test/sigmoid_example_s12345/: eval_performance.jsonl  events.out.tfevents.1634292972.baldur.31629.0  events.out.tfevents.1634302145.baldur.6041.0  train_performance.jsonl
docs/: Makefile  api.rst  cite.rst  conf.py  dac.rst  index.rst
docs/api/: mighty.agent.archive.base.rst  mighty.agent.archive.new_td3.rst  mighty.agent.archive.rst  mighty.agent.archive.salina_td3.rst  mighty.agent.base_agent.rst  mighty.agent.dqn.rst  mighty.agent.factory.rst  mighty.agent.ppo.rst  mighty.agent.rst  mighty.agent.sac.rst  mighty.env.env_handling.rst  mighty.env.rst  mighty.iohandling.experiment_tracking.rst  mighty.iohandling.rst  mighty.rst  mighty.run_mighty.rst  mighty.utils.agent_parser.rst  mighty.utils.base_config_parser.rst  mighty.utils.extended_checkpointing.rst  mighty.utils.logger.rst  mighty.utils.main_parser.rst  mighty.utils.rollout_worker.rst  mighty.utils.rst  mighty.utils.scenario_config_parser.rst  mighty.utils.types.rst
docs/examples/: index.rst
examples/: README.md  Readme.md  TestEval.ipynb  run_ez_greedy.sh  run_her.sh  run_her_utils.py  run_plr.sh  run_space.sh
examples_deprecated/: run_cosine_lr.sh  run_ez_greedy.sh  run_her.sh  run_space.sh
main/: .buildinfo  api.html  basics.html  cite.html  crl.html  dac.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
main/.doctrees/: api.doctree  basics.doctree  cite.doctree  crl.doctree  dac.doctree  environment.pickle  index.doctree  installation.doctree  sg_execution_times.doctree
main/_modules/: index.html
main/_sources/: basics.rst.txt  crl.rst.txt  installation.rst.txt
main/_static/: documentation_options.js
main/api/: mighty.html  mighty.mighty_agents.base_agent.html  mighty.mighty_agents.dqn.html  mighty.mighty_agents.factory.html  mighty.mighty_agents.html  mighty.mighty_agents.ppo.html  mighty.mighty_agents.sac.html  mighty.mighty_exploration.epsilon_greedy.html  mighty.mighty_exploration.ez_greedy.html  mighty.mighty_exploration.html  mighty.mighty_exploration.mighty_exploration_policy.html  mighty.mighty_exploration.stochastic_policy.html  mighty.mighty_meta.cosine_lr_schedule.html  mighty.mighty_meta.html  mighty.mighty_meta.mighty_component.html  mighty.mighty_meta.plr.html  mighty.mighty_meta.space.html  mighty.mighty_models.dqn.html  mighty.mighty_models.html  mighty.mighty_models.networks.html  mighty.mighty_models.ppo.html  mighty.mighty_models.sac.html  mighty.mighty_replay.buffer.html  mighty.mighty_replay.html  mighty.mighty_replay.mighty_replay_buffer.html  mighty.mighty_replay.mighty_rollout_buffer.html  mighty.mighty_runners.factory.html  mighty.mighty_runners.html  mighty.mighty_runners.mighty_es_runner.html  mighty.mighty_runners.mighty_maml_runner.html  mighty.mighty_runners.mighty_online_runner.html  mighty.mighty_runners.mighty_runner.html  mighty.mighty_update.html  mighty.mighty_update.ppo_update.html  mighty.mighty_update.q_learning.html  mighty.mighty_update.sac_update.html  mighty.run_mighty.html
main/examples/: index.html  sg_execution_times.html
mighty/: __init__.py  mighty_cli.py  run_mighty.py  run_mighty_deprecated.py  tune_mighty.sh
mighty/agent/: base.py  base_agent.py  base_agent_deprecated.py  coax_agent.py  coax_ddqn.py  coax_sac.py  ddqn.py  ddqn_config_parser.py  dqn.py  factory.py  new_td3.py  ppo.py  ppo_deprecated.py  run_original.py  sac.py  salina_td3.py  td3.py  td3_in_parts.py  td3_original.py
mighty/configs/: base.yaml  bbfe_buffer_comparison.yaml  cmaes_hpo.yaml  nes.yaml  pbt_buffer_comparison.yaml  slurm.yaml  smac.yaml  sweep.yaml
mighty/configs_deprecated/: base.yaml
mighty/env/: env_handling.py
mighty/iohandling/: experiment_tracking.py
mighty/mighty_agents/: __init__.py  base_agent.py  dqn.py  dqn_deprecated.py  factory.py  factory_deprecated.py  ppo.py  sac.py  sac_deprecated.py
mighty/mighty_exploration/: __init__.py  epsilon_greedy.py  epsilon_greedy_deprecated.py  ez_greedy.py  ez_greedy_deprecated.py  mighty_exploration_policy.py  mighty_exploration_policy_deprecated.py  stochastic_policy.py
mighty/mighty_meta/: __init__.py  cosine_lr_schedule.py  cosine_lr_schedule_deprecated.py  mighty_component.py  plr.py  plr_deprecated.py  space.py  space_deprecated.py
mighty/mighty_models/: __init__.py  dqn.py  networks.py  ppo.py  sac.py
mighty/mighty_replay/: __init__.py  buffer.py  her.py  her_deprecated.py  mighty_replay_buffer.py  mighty_rollout_buffer.py
mighty/mighty_runners/: __init__.py  factory.py  mighty_es_runner.py  mighty_maml_runner.py  mighty_nes_runner.py  mighty_online_runner.py  mighty_runner.py
mighty/mighty_update/: __init__.py  ppo_update.py  q_learning.py  sac_update.py
mighty/mighty_utils/: __init__ .py  agent_handling.py  (+6 more)
test/: mock_environment.py  test_buffer.py  test_cli.py  test_env_creation.py  test_exploration.py  test_logging.py  test_models.py  test_networks.py  test_update.py  utils.py
test_deprecated/: test_logging.py
(+268 files in other folders)
