[metadata]
name = mighty
author_email = "TODO"
description = MightyDAC.
long_description = file: README.md, LICENSE
license = Apache 2.0
keywords = machine learning, dynamic algorithm configuration, hyperparameter optimization, tuning
classifiers=
        Development Status :: 3 - Alpha
        Topic :: Utilities
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Artificial Intelligence
        License :: OSI Approved :: BSD License
platforms = Linux

[options]
packages = find:

[options.packages.find]
exclude = test
