[metadata]
name = mighty
version = 0.0.1
author = "TODO"
author_email = "TODO"
description = MightyDAC.
long_description = file: README.md, LICENSE
license = Apache 2.0
keywords = machine learning, dynamic algorithm configuration, hyperparameter optimization, tuning
classifiers=
        Development Status :: 3 - Alpha
        Topic :: Utilities
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Artificial Intelligence
        License :: OSI Approved :: BSD License
platforms = Linux

[options]
python_requires= >=3.9
install_requires = 
        gymnasium >=0.26.3
        scipy >=1.10.1
        pandas >=1.5.3
        numpy >=1.21
        tensorboard.logger ~=0.1
        ConfigArgParse ~=1.4
        hydra-core ~=1.2
        hydra-colorlog ~=1.2
        hydra-submitit-launcher ~=1.2
        rich ~=12.4
        jax ==0.4.6
        jaxlib ==0.4.6
        coax ~=0.1.13
        wandb ~=0.12
        automl-sphinx-theme
packages = find:

[options.packages.find]
exclude = test

[options.extras_require]
plotting =
        matplotlib >=3.7.1
        seaborn >=0.12.2
dacbench =
        configspace ==0.6.1
        Pyro4 ==4.82